<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="android.christian.passwordmanagement.AddPasswordActivity">

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/newSiteName"
            android:layout_margin="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/globe_24"
            android:drawablePadding="16dp"
            android:singleLine="true"
            android:hint="@string/new_site_name"
            android:inputType="textUri" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/newSite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawablePadding="16dp"
                android:layout_weight="0.5"
                android:drawableStart="@drawable/full_globe_24"
                android:hint="@string/new_site"
                android:inputType="textWebEmailAddress"
                android:singleLine="true" />

            <Button
                android:id="@+id/goToUrl"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:drawableStart="@drawable/compass_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to"
                android:onClick="goToSite"/>
        </LinearLayout>

        <EditText
            android:id="@+id/newUser"
            android:layout_margin="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user_24"
            android:drawablePadding="16dp"
            android:singleLine="true"
            android:hint="@string/new_username"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password_icon_24"
                android:drawablePadding="16dp"
                android:layout_weight="0.5"
                android:hint="@string/new_password"
                android:inputType="text" />

            <Button
                android:id="@+id/newRandomPassword"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:drawableStart="@drawable/lock_with_circle_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_random_password"
                android:onClick="randomPassword"/>

        </LinearLayout>

        <EditText
            android:id="@+id/newEmail"
            android:layout_margin="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/message_24"
            android:drawablePadding="16dp"
            android:singleLine="true"
            android:hint="@string/new_email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/newNote"
            android:layout_margin="16dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/note_24"
            android:drawablePadding="16dp"
            android:singleLine="true"
            android:hint="@string/new_note"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/mainContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/newCancel"
            style="@android:style/Widget.Material.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/cancel_32"
            android:text="@string/new_abort"
            android:onClick="abortAction"/>

        <Button
            android:id="@+id/newSave"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:drawableStart="@drawable/save_32"
            android:text="@string/new_save"
            android:onClick="savePassword"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
