<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splashscreen"
    tools:context="android.christian.passwordmanagement.HomeActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/addPasswordButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center"
            android:drawableTint="#000"
            android:drawableTop="@drawable/add_128"
            android:onClick="addPassword"
            android:text="@string/nuova"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/listPasswordButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:drawableTint="#000"
            android:drawableTop="@drawable/list_128"
            android:onClick="showList"
            android:text="@string/list"
            android:textColor="#000000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/generateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:backgroundTint="@color/colorPrimary"
            android:drawableTop="@drawable/list_128"
            android:text="@string/random"
            android:textColor="#000000" />

        <Button
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="1"
            android:drawableTop="@drawable/setting_128"
            android:text="@string/setting"
            android:onClick="goToSetting"
            android:textColor="#000000"
            android:textStyle="bold"/>

    </GridLayout>

    <Button
        android:id="@+id/devButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dev"
        android:onClick="goToDev"/>

</android.support.constraint.ConstraintLayout>